VPC/security_group.tf
resource "aws_security_group" "terra_security_group" {
  vpc_id = aws_vpc.terra_vpc.id

  ingress {
    description = "allow port 22"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  ingress {
    description = "allow port 80"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  egress {
    description = "allow all IP and ports outbound"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
  }

  tags = {
    Name = "terra_sg"
  }
}
